--- a/src/site/asciidoc/manual/appenders.adoc
+++ b/src/site/asciidoc/manual/appenders.adoc
@@ -1271,7 +1271,7 @@ new `<JMS/>` configuration element.
 |=======================================================================
 |Parameter Name |Type |Default |Description
 |allowedLdapClasses|String|null|A comma separated list of fully qualified class names that may be accessed by LDAP.
-The classes must implement Serializable. Only applies when the JMS Appender By default only Java primative classes
+The classes must implement Serializable. Only applies when the JMS Appender By default only Java primitive classes
 are allowed.
 |allowedLdapHosts|String|null|A comma separated list of host names or ip addresses that may be accessed by LDAP.
 By default only the local host names and ip addresses are allowed.
