--- a/src/site/asciidoc/manual/lookups.adoc
+++ b/src/site/asciidoc/manual/lookups.adoc
@@ -274,7 +274,7 @@ key will be prefixed with java:comp/env/, however if the key contains a
 By default the JDNI Lookup only supports the java, ldap, and ldaps protocols or no protocol. Additional
 protocols may be supported by specifying them on the ``log4j2.allowedJndiProtocols`` property.
 When using LDAP Java classes that implement the Referenceable interface are not supported for security
-reasons. Only the Java primative classes are supported by default as well as any classes specified by the
+reasons. Only the Java primitive classes are supported by default as well as any classes specified by the
 ``log4j2.allowedLdapClasses`` property. When using LDAP only references to the local host name
 or ip address are supported along with any hosts or ip addresses listed in the
 ``log4j2.allowedLdapHosts`` property.
