--- a/src/site/asciidoc/manual/logsep.adoc
+++ b/src/site/asciidoc/manual/logsep.adoc
@@ -116,6 +116,10 @@ cause the container to use JNDI to locate each web application's
 context parameter to true and also set the `log4jContextName` and
 `log4jConfiguration` context parameters.
 
+The `JndiContextSelector` will not work unless `log4j2.enableJndi=true` is set as a system property
+or environment variable. See the
+link:./configuration.html#enableJndi[log4j2.enableJndi] system property.
+
 The exact method for setting system properties depends on the container.
 For Tomcat, edit `$CATALINA_HOME/conf/catalina.properties`. Consult the
 documentation for other web containers.
