--- a/src/site/asciidoc/manual/scala-api.adoc
+++ b/src/site/asciidoc/manual/scala-api.adoc
@@ -25,8 +25,9 @@ API.
 == Requirements
 
 Log4j 2 Scala API is dependent on the Log4j 2 API, Scala runtime library
-and reflection. It currently supports Scala 2.10, 2.11 and 2.12. See
-link:../maven-artifacts.html#Scala_API[instructions] on including this
+and reflection. It currently supports Scala 2.10, 2.11, 2.12 and 2.13.
+Scala 3 support has been recently added.
+See link:../maven-artifacts.html#Scala_API[instructions] on including this
 in an SBT, Maven, Ivy, or Gradle project.
 
 == Example
