--- a/src/site/asciidoc/support.adoc
+++ b/src/site/asciidoc/support.adoc
@@ -47,3 +47,4 @@ projects, we cannot recommend any particular individual for any specific issue.
 * [Matt Sicker](https://github.com/jvz)
 * [Ralph Goers](https://github.com/rgoers)
 * [Volkan Yazıcı](https://github.com/vy)
+* [Carter Kozak](https://github.com/carterkozak)
