--- a/src/site/asciidoc/manual/lookups.adoc
+++ b/src/site/asciidoc/manual/lookups.adoc
@@ -623,7 +623,8 @@ profiles can be an array. If more than one profile is present they will be retur
 list. To retrieve a single item from the array append `[{index}]` to the key. For example, to return the
 first active profile in the list specify `profiles.active[0]`.
 
-This Lookup will return null values until Spring Boot initializes application logging.
+This Lookup will return null values until Spring Boot initializes application logging. The Spring Boot
+Lookup requires the `log4j-spring-boot` jar be included as a dependency.
 
 
 [source,xml]
