--- a/src/site/asciidoc/manual/extending.adoc
+++ b/src/site/asciidoc/manual/extending.adoc
@@ -64,7 +64,7 @@ classpath.
 
 [#InjectorCallback]
 == InjectorCallback
-InjectorCallback services are called by an link:../log4j-plugins/apidocs/org/apache/logging/log4j/plugins/di/Injector.html[`Injector`] when its `init()` method is invoked.
+InjectorCallback services are called by an link:../log4j-plugins/apidocs/org/apache/logging/log4j/plugins/di/Injector.html[`Injector`] when its `init()` method is invoked (see link:./dependencyinjection.html[Dependency Injection] for further information about `Injector`).
 These callback services are invoked in order using `InjectorCallback::getOrder` and the natural integer comparator.
 Callbacks may examine the current state of the invoking `Injector` as well as make changes to bindings or provide default bindings.
 Backwards compatibility with system property based methods for configuring various extensions are handled through a default callback with order 0 which allows for making customizations before or after the defaults are set up.
@@ -188,8 +188,8 @@ public static class RootLogger extends LoggerConfig {
     @PluginFactory
     public static LoggerConfig createLogger(@PluginAttribute(defaultBooleanValue = true) boolean additivity,
                                             @PluginAttribute(defaultStringValue = "ERROR") Level level,
-                                            @PluginElement("AppenderRef") AppenderRef[] refs,
-                                            @PluginElement("Filters") Filter filter) {
+                                            @PluginElement AppenderRef[] refs,
+                                            @PluginElement Filter filter) {
         List<AppenderRef> appenderRefs = Arrays.asList(refs);
         return new LoggerConfig(LogManager.ROOT_LOGGER_NAME, appenderRefs, filter, level, additivity);
     }
@@ -379,8 +379,8 @@ public final class StubAppender extends AbstractOutputStreamAppender<StubManager
     @PluginFactory
     public static StubAppender createAppender(@PluginAttribute @Required(message = "No name provided for StubAppender") String name,
                                               @PluginAttribute boolean ignoreExceptions,
-                                              @PluginElement("Layout") Layout layout,
-                                              @PluginElement("Filters") Filter filter) {
+                                              @PluginElement Layout layout,
+                                              @PluginElement Filter filter) {
 
         StubManager manager = StubManager.getStubManager(name);
         if (manager == null) {
@@ -509,11 +509,11 @@ Here is an example of a plugin factory from `ListAppender`:
 ----
 @PluginFactory
 public static ListAppender createAppender(
-        @PluginAttribute("name") @Required(message = "No name provided for ListAppender") final String name,
-        @PluginAttribute("entryPerNewLine") final boolean newLine,
-        @PluginAttribute("raw") final boolean raw,
-        @PluginElement("Layout") final Layout<? extends Serializable> layout,
-        @PluginElement("Filter") final Filter filter) {
+        @PluginAttribute @Required(message = "No name provided for ListAppender") final String name,
+        @PluginAttribute final boolean entryPerNewLine,
+        @PluginAttribute final boolean raw,
+        @PluginElement final Layout<? extends Serializable> layout,
+        @PluginElement final Filter filter) {
     return new ListAppender(name, filter, layout, newLine, raw);
 }
 ----
@@ -535,33 +535,31 @@ public static class Builder implements org.apache.logging.log4j.plugins.util.Bui
     private Layout<? extends Serializable> layout;
     private Filter filter;
 
-    @PluginAttribute
-    @Required(message = "No name provided for ListAppender")
-    public Builder setName(final String name) {
+
+    public Builder setName(
+            @PluginAttribute
+            @Required(message = "No name provided for ListAppender")
+            final String name) {
         this.name = name;
         return this;
     }
 
-    @PluginAttribute
-    public Builder setEntryPerNewLine(final boolean entryPerNewLine) {
+    public Builder setEntryPerNewLine(@PluginAttribute final boolean entryPerNewLine) {
         this.entryPerNewLine = entryPerNewLine;
         return this;
     }
 
-    @PluginAttribute
-    public Builder setRaw(final boolean raw) {
+    public Builder setRaw(@PluginAttribute final boolean raw) {
         this.raw = raw;
         return this;
     }
 
-    @PluginElement
-    public Builder setLayout(final Layout<? extends Serializable> layout) {
+    public Builder setLayout(@PluginElement final Layout<? extends Serializable> layout) {
         this.layout = layout;
         return this;
     }
 
-    @PluginElement
-    public Builder setFilter(final Filter filter) {
+    public Builder setFilter(@PluginElement final Filter filter) {
         this.filter = filter;
         return this;
     }
